src/test/deca/context/invalid/objet/new-string.deca
// Description:
//    Condition de la règle 3.42 non respectée 
//
// Resultats:
//    Erreur Contextuelle
//    Ligne 10 : New is only for classes
//

{
    string a = new string();
}
